--- a/index.html
+++ b/index.html
@@ -252,17 +252,17 @@
                                 <div class="hidden md:block">
                                         <div class="ml-10 flex items-baseline space-x-8">
                                                 <a href="#home"
-                                                        class="text-gray-300 hover:text-white px-3 py-2 rounded-md text-sm font-medium transition-all duration-300">Home</a>
+                                                        class="text-gray-300 hover:text-#3b82f6 px-3 py-2 rounded-md text-sm font-medium transition-all duration-300">Home</a>
                                                 <a href="#about"
-                                                        class="text-gray-300 hover:text-white px-3 py-2 rounded-md text-sm font-medium transition-all duration-300">About</a>
+                                                        class="text-gray-300 hover:text-#3b82f6 px-3 py-2 rounded-md text-sm font-medium transition-all duration-300">About</a>
                                                 <a href="#skills"
-                                                        class="text-gray-300 hover:text-white px-3 py-2 rounded-md text-sm font-medium transition-all duration-300">Skills</a>
+                                                        class="text-gray-300 hover:text-#3b82f6 px-3 py-2 rounded-md text-sm font-medium transition-all duration-300">Skills</a>
                                                 <a href="#projects"
-                                                        class="text-gray-300 hover:text-white px-3 py-2 rounded-md text-sm font-medium transition-all duration-300">Projects</a>
+                                                        class="text-gray-300 hover:text-#3b82f6 px-3 py-2 rounded-md text-sm font-medium transition-all duration-300">Projects</a>
                                                 <a href="#experience"
-                                                        class="text-gray-300 hover:text-white px-3 py-2 rounded-md text-sm font-medium transition-all duration-300">Experience</a>
+                                                        class="text-gray-300 hover:text-#3b82f6 px-3 py-2 rounded-md text-sm font-medium transition-all duration-300">Experience</a>
                                                 <a href="#contact"
-                                                        class="text-gray-300 hover:text-white px-3 py-2 rounded-md text-sm font-medium transition-all duration-300">Contact</a>
+                                                        class="text-gray-300 hover:text-#3b82f6 px-3 py-2 rounded-md text-sm font-medium transition-all duration-300">Contact</a>
                                         </div>
                                 </div>
                                 <div class="md:hidden">
@@ -296,7 +296,7 @@
                                         innovative design approaches.
                                 </p>
                                 <div class="flex space-x-4">
-                                        <a href="buckups.html"
+                                        <a href="index3.html"
                                                 class="px-8 py-3 bg-gradient-to-r from-blue-500 to-purple-600 rounded-full font-medium text-white hover:shadow-lg transition-all duration-300 transform hover:scale-105">
                                                 Get files...
                                         </a>
