--- a/index2.html
+++ b/index2.html
@@ -16,19 +16,19 @@
         <h1 class="title">Select File Type</h1>
         <div class="file-options">
             <div class="option audio">
-                <i class="fas fa-music"></i>
+                <i class="fas fa-music"><a href="index3.html"></a></i>
                 <span>Audio</span>
             </div>
             <div class="option image">
-                <i class="fas fa-image"></i>
+                <i class="fas fa-image"><a href="index3.html"></a></i>
                 <span>Image</span>
             </div>
             <div class="option video">
-                <i class="fas fa-video"></i>
+                <i class="fas fa-video"><a href="index3.html"></a></i>
                 <span>Video</span>
             </div>
             <div class="option document">
-                <i class="fas fa-file-alt"></i>
+                <i class="fas fa-file-alt"><a href="index3.html"></a></i>
                 <span>Document</span>
             </div>
         </div>
