--- a/index3.html
+++ b/index3.html
@@ -249,7 +249,7 @@
             const successMessage = document.getElementById('successMessage');
             const passwordInput = document.getElementById('password');
 
-            if (password === "Jehoshua") {
+            if (password === "12345") {
                 // Success - show animation
                 form.classList.add('hidden');
                 successMessage.classList.remove('hidden');
