Update and rename app.html to inde.html

--- a/inde.html
+++ b/inde.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Eyasu's Website</title>
+  <title>Joshua's Website</title>
   <style>
     /* Preloader Styles */
     #preloader {
@@ -456,7 +456,7 @@
       floating particles, multi-ring loader, animated text with wave effect, gradient progress bar, and smooth
       transitions.</p>
     <div class="content-element">
-      <a href="index.html" class="button">Explore More</a>
+      <a href="index.5.html" class="button">Explore More</a>
     </div>
   </div>
 
